@@ -13,3 +13,25 @@ const pstat_score [
     result (concat (player $arg1 flags) (player $arg1 frags) (player $arg1 deaths) (player $arg1 points) (player $arg1 team) (player $arg1 tks) (player $arg1 name))
   ] [ result (concat "0 0 0 0 -1 0" (addpunct)) ]
 ]
+
+const orderscorecolumns [
+    if (= $arg1 1) [
+        sc_clientnum 0;
+        sc_name 1;
+        sc_flags 2;
+        sc_frags 3;
+        sc_deaths 4;
+        sc_score 5;
+        sc_lag 6;
+        sc_ratio -1;
+    ] [ 
+        sc_flags 0;
+        sc_frags 1;
+        sc_deaths 2;
+        sc_ratio -1;
+        sc_score 4;
+        sc_lag 5;
+        sc_clientnum 6;
+        sc_name 7;
+    ]
+]
