@@ -84,6 +84,7 @@ Rendering / HUD / ...
 [*] screenshotscale - in-engine scaling of screenshots.
 [*] showtargetname - turns on/off showing the player name on the HUD when in your crosshair.
 [*] Scoreboard doesn't show ping/score/pj in singleplayer
+[*] Customizable scoreboard, ability to display ratio
 [*] showspeed - turns speed indicator on/off
 [*] Improved tab completion.
 
